tests/errors/nomore_types_on_right_errors.ctp

def (main:
    # from an earlier test
    constval = (lambda(x:
        x
    ) : int) (6) : auto : const
)
        